namespace Serialisieren_Deserialisieren;

public class Mensch : Lebewesen
{
    public string Wohnort { get; set; }
}